<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="56dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:text="@string/app_name"
                android:textSize="16sp"
                android:fontFamily="sans-serif-black"

                />

        </RelativeLayout>
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="true"
        android:background="#fafafa"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:adjustViewBounds="true"
                android:src="@drawable/profile_image" />

            <TextView
                android:id="@+id/tv_profile_fullName"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:text="Elaheh Hesami"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:paddingEnd="24dp"
                android:paddingStart="24dp"
                android:weightSum="2">

                <Button
                    android:id="@+id/btn_profile_editProfile"
                    style="@style/ButtonDefault.primary"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/shape_button_primary"
                    android:text="@string/profile_editProfile" />

                <Button
                    android:id="@+id/btn_profile_viewWebsite"
                    style="@style/ButtonDefault.Secondary"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/shape_button_secondary"
                    android:text="@string/profile_viewWebsite"
                    android:textColor="@color/black" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout_profile_fullNameContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingEnd="24dp"
                android:paddingStart="24dp"
                android:visibility="gone"
                android:weightSum="2">

                <EditText
                    android:id="@+id/et_profile_firsName"
                    style="@style/EditTextDefault"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="1"
                    android:hint="@string/profile_firstNameHint" />

                <EditText
                    android:id="@+id/et_profile_lastName"
                    style="@style/EditTextDefault"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_weight="1"
                    android:hint="@string/profile_lastNameHint" />


            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/profile_skills"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="16dp"
                android:paddingTop="8dp">

                <CheckBox
                    android:id="@+id/checkbox_profile_Android"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_Android" />

                <CheckBox
                    android:id="@+id/checkbox_profile_css"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_uiDesign" />

                <CheckBox
                    android:id="@+id/checkbox_profile_deep"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_deepLearning" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/profile_city" />

            <RadioGroup
                android:id="@+id/radioGroup_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="16dp"
                android:paddingTop="8dp">


                <RadioButton
                    android:id="@+id/radio_profile_tehran"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_gilan" />

                <RadioButton
                    android:id="@+id/radio_profile_zanjan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_tehran" />

                <RadioButton
                    android:id="@+id/radio_profile_arak"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_alborz" />
            </RadioGroup>
        </LinearLayout>


    </ScrollView>
    <Button
        android:id="@+id/button_profile_saveInformation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_saveInformation"
        android:layout_gravity="bottom"
        android:background="@color/colorAccent"
        android:textColor="@color/white"
        />

</android.support.design.widget.CoordinatorLayout>